[tool.poetry]
name = "multiplayer-text-dnd"
version = "0.1.0"
description = ""
authors = ["michael mentele <michaelrmentele@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
quart = "^0.18.4"
quart-cors = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
