[tool.poetry]
name = "multiplayer-text-dnd"
version = "0.1.0"
description = ""
authors = ["michael mentele <michaelrmentele@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.103.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
